Set keys to null in config file rather than commenting them out

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -28,7 +28,7 @@ talismane {
       # - tokeniser
       # - posTagger
       # - parser
-      # module = null
+      module = null
       
       # gives the base name for output files, if not overridden in code
       base-name = "talismane"
@@ -37,14 +37,14 @@ talismane {
       suffix = ""
           
       # if encoding is not provided, the default encoding for the system will be used
-      #encoding = null
+      encoding = null
       
       # inputEncoding and outputEncoding can override encoding
-      #input-encoding = null
-      #output-encoding = null
+      input-encoding = null
+      output-encoding = null
       
-      # The locale in which we are analysing - required if not provided in the language pack
-      #locale = null
+      # The locale in which we are analysing - must be overridden
+      locale = null
       
       ### The list of lexicons to use
       # The lexicons are used to find lemmas and morphosyntaxic attributes for known words, and to feed various analysis features
@@ -166,7 +166,7 @@ talismane {
       
       language-detector {
         # Path to the language detection model
-        #model = null
+        model = null
         
         input = ${talismane.core.generic.input} {
           # the class used to read the corpus
@@ -175,19 +175,19 @@ talismane {
         
         train = ${talismane.core.generic.language-detector.input} {        
           # A path to a file containing sentence-detector feature descriptors
-          #features = null
+          features = null
           
           machine-learning = ${talismane.machine-learning}
           
           # A path to a file listing, for each language, the path to its corpus.
           # Format is locale code, followed by a tab, followed by the path to a file containing the corpus.
-          #language-corpus-map = null
+          language-corpus-map = null
         }
       }
       
       sentence-detector {
         # Path to the sentence detection model
-        #model = null
+        model = null
         
         output = ${talismane.core.generic.output} {
           # a list of processors to apply
@@ -203,7 +203,7 @@ talismane {
           ]
           
           # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
-          #template = null
+          template = null
         }
         
         input = ${talismane.core.generic.input} {
@@ -213,7 +213,7 @@ talismane {
         
         train = ${talismane.core.generic.sentence-detector.input} {        
           # A path to a file containing sentence-detector feature descriptors
-          #features = null
+          features = null
           
           machine-learning = ${talismane.machine-learning}
         }
@@ -246,7 +246,7 @@ talismane {
         ]
         
         # If using a pattern tokeniser, the path to the tokeniser model
-        #model = null
+        model = null
               
         # The beam width used by the tokeniser
         beam-width = 1
@@ -265,7 +265,7 @@ talismane {
           ]
           
           # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
-          #template = null
+          template = null
         }
         
         input = ${talismane.core.generic.input} {
@@ -277,7 +277,7 @@ talismane {
             
           # if a sentence file is provided, the text of sentences represented by the tokenised input is provided by this file, one sentence per line.
           # otherwise, their text for use in tokenisation features is automatically reconstructed from the manually tokenised input, and the spacing may be erroneous
-          #sentence-file = null
+          sentence-file = null
           
           # See core.talismane.parser.input.corpus-rules
           corpus-rules = []
@@ -285,10 +285,10 @@ talismane {
         
         train = ${talismane.core.generic.tokeniser.input} {        
           # A path to a file containing tokeniser feature descriptors
-          #features = null
+          features = null
           
           # A path to a file containing patterns indicating which areas need further testing by the pattern tokeniser
-          #patterns = null
+          patterns = null
           
           machine-learning = ${talismane.machine-learning}
         }
@@ -314,8 +314,8 @@ talismane {
         # The pos-tagger itself. Must extend com.joliciel.talismane.posTagger.PosTagger and have a constructor taking a TalismaneSession
         pos-tagger = com.joliciel.talismane.posTagger.ForwardStatisticalPosTagger
         
-        # The pos-tag set used when no model has been provided
-        # pos-tag-set
+        # The pos-tag set to use
+        pos-tag-set = null
         
         pos-tag-map {
           # for each lexicon name in the lexicon list, optionally list a pos-tag mapper path mapping the lexicon entries to pos-tags
@@ -323,7 +323,7 @@ talismane {
         }
           
         # A path to the pos-tagger model
-        #model = null
+        model = null
         
         # Paths to files containing pos-tagger rules to apply
         rules = []
@@ -350,7 +350,7 @@ talismane {
           ]
         
           # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
-          #template = null
+          template = null
           
           # a list of words to test pos-tag features on, other words will be skipped
           test-words = []
@@ -365,11 +365,11 @@ talismane {
           
           # A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
           # making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
-          #corpus-lexical-entry-regex = null
+          corpus-lexical-entry-regex = null
           
           # if a sentence file is provided, the text of sentences represented by the tokenised input is provided by this file, one sentence per line.
           # allows Talismane to know the correct original spacing.
-          #sentence-file = null
+          sentence-file = null
           
           # See core.talismane.parser.input.corpus-rules
           corpus-rules = []
@@ -377,7 +377,7 @@ talismane {
         
         train = ${talismane.core.generic.pos-tagger.input} {
           # A path to a file containing pos-tagger feature descriptors
-          #features = null
+          features = null
           
           machine-learning = ${talismane.machine-learning}
         }
@@ -421,10 +421,10 @@ talismane {
         transition-system = "ArcEager"
         
         # The list of possible dependency labels when no model has been provided
-        #dependency-labels = null
+        dependency-labels = null
 
         # A path to the parser model
-        #model = null
+        model = null
         
         # Paths to files containing parser rules to apply
         rules = []
@@ -476,7 +476,7 @@ talismane {
           ]
           
           # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
-          #template = null
+          template = null
         }
             
         input = ${talismane.core.generic.input} {
@@ -494,11 +494,11 @@ talismane {
           
           # A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
           # making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
-          #corpus-lexical-entry-regex = null
+          corpus-lexical-entry-regex = null
    
           # if a sentence file is provided, the text of sentences represented by the tokenised input is provided by this file, one sentence per line.
           # allows Talismane to know the correct original spacing.
-          #sentence-file = null
+          sentence-file = null
 
           # A list of corpus transformation rules, which can change the value any element read from a pre-annotated input corpus
           # based an a conjunction of regexes matching any set of elements on the same line.
@@ -526,7 +526,7 @@ talismane {
         
         train = ${talismane.core.generic.parser.input} {
           # A path to a file containing parser feature descriptors
-          #features = null
+          features = null
           
           # When training, skip any sentences which cannot be parsed (rather than raising an exception)
           skip-impossible-sentences = true
@@ -544,7 +544,7 @@ talismane {
           projective = true
           
           # Label to be skipped when calculating distance f-scores - for arbitrary distance attachments in the case of punctuation
-          #skip-label = null
+          skip-label = null
           
           # If included, will output in the transition log, at the end of each parse, the correct sentence and erroneous sentence
           # if the error concerned any one of these comma-separated dependency labels
@@ -587,11 +587,11 @@ talismane {
         # Which character should separate cells in the CSV files generated
         separator = "\t"
       
-        # Which encoding to generate CSV files in. If blank will use the default encoding for the current OS.
-        #encoding = null
+        # Which encoding to generate CSV files in. If null will use the default encoding for the current OS.
+        encoding = null
         
-        # Which locale to use for CSV number formatting. If blank will use the default locale for the current OS.
-        #locale = null
+        # Which locale to use for CSV number formatting. If null will use the default locale for the current OS.
+        locale = null
       }
       
       conll {
