--- a/talismane_extensions/src/main/resources/reference.conf
+++ b/talismane_extensions/src/main/resources/reference.conf
@@ -14,13 +14,13 @@ talismane {
       corpus-statistics {
         # Path to the serialized reference (training) corpus statistics file
         # If provided, unknown words statistics will be included
-        # reference-stats = ""
+        reference-stats = null
       }
       
       pos-tagger-statistics {
         # Path to the serialized reference (training corpus) pos-tagger statistics file
         # If provided, unknown words statistics will be included
-        # reference-stats = ""
+        reference-stats = null
       }
       
       corpus-modifier {
