--- a/talismane_distribution/pom.xml
+++ b/talismane_distribution/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.joliciel.talismane</groupId>
     <artifactId>talismane-parent</artifactId>
-    <version>4.1.1-SNAPSHOT</version>
+    <version>5.0.0</version>
     <relativePath>../talismane_parent</relativePath>
   </parent>
 
