Fix crash where diacriticizer finds an unattached combining diacritic
Backport of commit 89bce839, release 5.0.2

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ target/
 dist/
 build/
 distTerminology/
+logs/
+examples/french/output/
 talismane_core/languagePacks/englishLanguagePack/*.zip
 talismane_core/languagePacks/frenchLanguagePack/*.zip
 .settings
