Create keepDirectoryStructure option
And fix functionality to write to a directory, maintaining the
sub-directory structure and file names, with option replacement of
suffixes.

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -34,7 +34,8 @@ talismane {
       base-name = "talismane"
       
       # If provided, will add this suffix to all output files (both in analysis and evaluation). Useful when comparing configurations.
-      suffix = ""
+      # Also will replace the extension for all files when analysing a directory and retaining the directory structure
+      suffix = null
           
       # if encoding is not provided, the default encoding for the system will be used
       encoding = null
