--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ talismane_core/languagePacks/english/languagePack/*.zip
 talismane_core/languagePacks/french/languagePack/*.zip
 .settings
 .project
+logback.xml
