--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -133,7 +133,12 @@ talismane {
       
         # The index of the first sentence to process. Earlier sentences will be skipped.
         start-sentence = 0
-        
+
+        # regexes indicating lines to be skipped
+        skip-line-patterns = [
+          "#.*"
+        ]
+          
         cross-validation {
           # If greater than 0, the input file will be split into foldCount folds
           # Typically, 10-fold validation is used, if cross-validation is desired
@@ -363,7 +368,7 @@ talismane {
 
           # the regex used to read tokens from the evaluation corpus
           input-pattern = "%INDEX%\t%TOKEN%\t%LEMMA%\t%POSTAG%\t%CATEGORY%\t%MORPHOLOGY%"
-          
+                    
           # A path to a file containing a regex describing how to read a lexical entry from each line in the corpus
           # making it possible to maintain and/or transform morphosyntaxic attributes when processing a corpus
           corpus-lexical-entry-regex = null
