Enable line merging when reading token-per-line corpus

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -151,7 +151,46 @@ talismane {
           # Used when training in cross-validation
           # If provided, one of the folds will be excluded, numbered from 0 to foldCount - 1
           exclude-index = -1
-        }      
+        }
+        
+        # A set of rules to transform the contents of individual lines in a corpus
+        # When the corpus has one token per line.
+        line-rules = [
+          #{
+          #  criteria = {
+          #    LABEL = "Dep[A-Za-z]*-nproj"
+          #    NON_PROJ_LABEL = "Dep[A-Za-z]*"
+          #  }
+          #  actions = {
+          #    NON_PROJ_LABEL = "Dep-nproj"
+          #  }
+          #},
+        ]
+        
+        # A set of rules to transform the entire sentences read from the corpus
+        # When the corpus has one token per line.
+        # Currently available actions: merge
+        sentence-rules = [
+          #{
+          #  pattern = "(\\d+?)\\-(\\d+?)\\t(.+)\\t.*"
+          #  action = "merge $1 $2"
+          #  condition = {
+          #    line1 = {
+          #      POSTAG = "ADP" 
+          #    }
+          #    line2 = {
+          #      POSTAG = "DEP"
+          #    }
+          #  }
+          #  result = {
+          #    TOKEN = "$3"
+          #    LEMMA = "$3"
+          #    POSTAG = "ADP+DET"
+          #    GOVERNOR = "${line1}"
+          #    LABEL = "${line1}"
+          #  }
+          #},
+        ]
       }
         
       output {
