--- a/talismane_core/languagePacks/french-UD/config/fr-ud-train.conf
+++ b/talismane_core/languagePacks/french-UD/config/fr-ud-train.conf
@@ -32,6 +32,14 @@ input-ud {
     },
     {
       criteria = {
+        LABEL = "flat:.*"
+      }
+      actions = {
+        LABEL = "flat"
+      }
+    },
+    {
+      criteria = {
         LABEL = "iobj:.*"
       }
       actions = {
@@ -64,7 +72,7 @@ input-ud {
     },
   ]
   
-sentence-rules = [
+  sentence-rules = [
     {
       pattern = "(\\d+?)\\-(\\d+?)\\t(.+?)\\t.*"
       action = "merge $1 $2"
@@ -165,18 +173,23 @@ talismane {
         
         train = ${input-ud} {
            features="languagePacks/french-UD/features/posTagger_fr_baseline.txt"
+           machine-learning {
+             cutoff=3
+           }
         }
-
       }
       
       parser {
         dependency-labels = ${languagePack}"relations.txt"
         
         input = ${input-ud}
-        
+
         train = ${input-ud} {
           features="languagePacks/french-UD/features/parser_fr_baseline.txt" 
-        }
+           machine-learning {
+             cutoff=7
+           }
+         }
 
       }
     }
