Add possibility to split lines in output

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -518,10 +518,14 @@ talismane {
             com.joliciel.talismane.parser.output.FreemarkerParseWriter
             # com.joliciel.talismane.parser.output.ParseFeatureTester
             # com.joliciel.talismane.parser.output.TransitionLogWriter
+            # com.joliciel.talismane.parser.output.ParseOutputRewriter
           ]
           
           # if provided, overrides the builtInTemplate by a specific a FreeMarker template for writing the output
           template = null
+          
+          # rules to split lines in the output when using com.joliciel.talismane.parser.output.ParseOutputRewriter
+          rewrite-rules = []
         }
             
         input = ${talismane.core.generic.input} {
