Tokenise most dashed expressions as a single token

--- a/talismane_core/languagePacks/french-UD/config/fr-ud-output.conf
+++ b/talismane_core/languagePacks/french-UD/config/fr-ud-output.conf
@@ -258,7 +258,7 @@ talismane {
       }
       
       tokeniser {
-        type = pattern
+        type = simple
 
         filters = [
           com.joliciel.talismane.tokeniser.filters.QuoteNormaliser
