--- a/talismane_core/languagePacks/french-UD/config/fr-ud-train.conf
+++ b/talismane_core/languagePacks/french-UD/config/fr-ud-train.conf
@@ -143,7 +143,7 @@ talismane {
       }
       
       tokeniser {
-        type = pattern
+        type = simple
 
         filters = [
           com.joliciel.talismane.tokeniser.filters.QuoteNormaliser
