Make reference.conf independent

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -1,3 +1,5 @@
+include "machine-learning.conf"
+
 talismane {
   core {
     # This is a generic core configuration containing all the default values.
