--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -224,7 +224,7 @@ talismane {
           # A path to a file containing sentence-detector feature descriptors
           features = null
           
-          machine-learning = ${talismane.machine-learning}
+          machine-learning = ${talismane.core.machine-learning}
           
           # A path to a file listing, for each language, the path to its corpus.
           # Format is locale code, followed by a tab, followed by the path to a file containing the corpus.
@@ -262,7 +262,7 @@ talismane {
           # A path to a file containing sentence-detector feature descriptors
           features = null
           
-          machine-learning = ${talismane.machine-learning}
+          machine-learning = ${talismane.core.machine-learning}
         }
         
         evaluate = ${talismane.core.generic.sentence-detector.input} {
@@ -337,7 +337,7 @@ talismane {
           # A path to a file containing patterns indicating which areas need further testing by the pattern tokeniser
           patterns = null
           
-          machine-learning = ${talismane.machine-learning}
+          machine-learning = ${talismane.core.machine-learning}
         }
         
         evaluate = ${talismane.core.generic.tokeniser.input} {
@@ -426,7 +426,7 @@ talismane {
           # A path to a file containing pos-tagger feature descriptors
           features = null
           
-          machine-learning = ${talismane.machine-learning}
+          machine-learning = ${talismane.core.machine-learning}
         }
         
         evaluate = ${talismane.core.generic.pos-tagger.input} {
@@ -584,7 +584,7 @@ talismane {
           
           predict-transitions = true
           
-          machine-learning = ${talismane.machine-learning}
+          machine-learning = ${talismane.core.machine-learning}
         }
         
         evaluate = ${talismane.core.generic.parser.input} {
