Replace existing distribution with shaded JARs

--- a/talismane_core/pom.xml
+++ b/talismane_core/pom.xml
@@ -31,6 +31,21 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <executions>
+          <execution>
+            <configuration>
+              <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                <manifestEntries>
+                  <Main-Class>com.joliciel.talismane.TalismaneMain</Main-Class>
+                </manifestEntries>
+              </transformer>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
       </plugin>
     </plugins>
