Improve MAVEN build Performance

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: java
 
-# move to the parent module before running the `mvn test` command
+# move to the parent module before running the `mvn -T 1C test` command
 before_script: cd talismane_parent
 
 # build and run the tests
-script: mvn test
+script: mvn -T 1C test
 
 branches:
   only:
