Add possibility to configure sentence boundary characters
As well as indicate whether a language has lowercase/uppercase letters

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -235,7 +235,14 @@ talismane {
       sentence-detector {
         # Path to the sentence detection model
         model = null
-        
+
+        # Regular expression to match possible sentence boundaries
+        possible-boundaries = """[.?!")\]}»—―”″“…]"""
+
+        # Adding a quote just to make the file highlight correctly "
+
+        language-has-uppercase-letters = true
+
         output = ${talismane.core.generic.output} {
           # a list of processors to apply
           # - FreemarkerSentenceWriter:  Output using a freemarker template.
