Remove long dashes as default possible sentence boundaries

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -237,7 +237,7 @@ talismane {
         model = null
 
         # Regular expression to match possible sentence boundaries
-        possible-boundaries = """[.?!")\]}»—―”″“…]"""
+        possible-boundaries = """[.?!")\]}»”″“…]"""
 
         # Adding a quote just to make the file highlight correctly "
 
